--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,11 @@ services:
       - ./kafka_data:/bitnami
     environment:
       - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper:2181
+      - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092
+      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://127.0.0.1:9092
+      - KAFKA_INTER_BROKER_USER=ibct
+      - KAFKA_INTER_BROKER_PASSWORD=qwer1234
+      - KAFKA_BROKER_ID=1
       - ALLOW_PLAINTEXT_LISTENER=yes
     depends_on:
       - zookeeper
