--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
     environment:
       - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper:2181
       - KAFKA_CFG_LISTENERS=PLAINTEXT://:19092
-      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://127.0.0.1:19092
+      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://:19092
       - KAFKA_INTER_BROKER_USER=ibct
       - KAFKA_INTER_BROKER_PASSWORD=qwer1234
       - KAFKA_BROKER_ID=1
