--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,8 +22,8 @@ services:
       - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper:2181
       # - KAFKA_CFG_LISTENERS=PLAINTEXT://:19092
       # - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://:19092
-      - KAFKA_INTER_BROKER_USER=ibct
-      - KAFKA_INTER_BROKER_PASSWORD=qwer1234
+      # - KAFKA_INTER_BROKER_USER=ibct
+      # - KAFKA_INTER_BROKER_PASSWORD=qwer1234
       - KAFKA_BROKER_ID=1
       - ALLOW_PLAINTEXT_LISTENER=yes
     depends_on:
