--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,20 +15,17 @@ services:
     container_name: kafka
     image: docker.io/bitnami/kafka:3
     ports:
-      - "19092:9092"
+      - "9092:9092"
     volumes:
       - ./kafka_data:/bitnami
     environment:
       - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper:2181
-      # - KAFKA_CFG_LISTENERS=PLAINTEXT://129.154.213.183:19092
-      # - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://129.154.213.183:19092
-      # - KAFKA_INTER_BROKER_USER=ibct
-      # - KAFKA_INTER_BROKER_PASSWORD=qwer1234
+      - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092
+      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://129.154.213.183:9092
       - KAFKA_BROKER_ID=1
       - ALLOW_PLAINTEXT_LISTENER=yes
     depends_on:
       - zookeeper
-    # command: sh -c "bin/zookeeper-server-start.sh config/zookeeper.properties & bin/kafka-server-start.sh config/server.properties"
 
   kafka_ui:
     container_name: kafka_ui
@@ -40,14 +37,14 @@ services:
     environment:
       KAFKA_CLUSTERS_0_ZOOKEEPER: zookeeper:2181
       KAFKA_CLUSTERS_0_NAME: local
-      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka:9092
+      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: 129.154.213.183:9092
     depends_on: 
       - kafka
 
   kafka_exporter:
     container_name: kafka-exporter
     image: danielqsj/kafka-exporter
-    command: --kafka.server=129.154.213.183:19092
+    command: --kafka.server=129.154.213.183:9092
     ports:
       - "9308:9308"
     depends_on: 
