--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,61 +1,91 @@
-version: "3"
-
+version: '3.8'
 services:
-  zookeeper:
-    container_name: zookeeper
-    image: docker.io/bitnami/zookeeper:3.7
+  zookeeper-1:
+    container_name: zookeeper-1
+    image: confluentinc/cp-zookeeper:7.1.1
+    platform: linux/amd64
     ports:
-      - "2181:2181"
+      - "${ZOOKEEPER_PORT}:32181"
     volumes:
-      - ./zookeeper_data:/bitnami
+      - ./data/${ZOOKEEPER_DIR}/data:/var/lib/zookeeper/data
+      - ./data/${ZOOKEEPER_DIR}/datalog:/var/lib/zookeeper/log
     environment:
-      - ALLOW_ANONYMOUS_LOGIN=yes
+      ZOOKEEPER_CLIENT_PORT: 32181
+      ZOOKEEPER_TICK_TIME: 2000
 
-  kafka:
-    container_name: kafka
-    image: docker.io/bitnami/kafka:3
+
+  kafka-1:
+    container_name: kafka-1
+    image: confluentinc/cp-kafka:7.1.1
+    platform: linux/amd64
     ports:
-      - "9092:9092"
+      - "${KAFKA_1_PORT}:9092"
     volumes:
-      - ./kafka_data:/bitnami
+      - ./data/${KAFKA_DIR}/kafka-1:/var/lib/kafka/data
     environment:
-      - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper:2181
-      - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092
-      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://129.154.213.183:9092
-      - KAFKA_BROKER_ID=1
-      - ALLOW_PLAINTEXT_LISTENER=yes
+      KAFKA_BROKER_ID: 1
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper-1:${ZOOKEEPER_PORT}
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
+      KAFKA_ADVERTISED_LISTENERS: INTERNAL://kafka-1:29092,EXTERNAL://${DOCKER_HOST_IP:-127.0.0.1}:${KAFKA_1_PORT}
+      KAFKA_DEFAULT_REPLICATION_FACTOR: 3
+      KAFKA_NUM_PARTITIONS: 3
     depends_on:
-      - zookeeper
+      - zookeeper-1
 
-  kafka_ui:
-    container_name: kafka_ui
-    image: provectuslabs/kafka-ui:latest
-    depends_on:
-      - kafka
-    ports:
-      - 8080:8080
-    environment:
-      KAFKA_CLUSTERS_0_ZOOKEEPER: zookeeper:2181
-      KAFKA_CLUSTERS_0_NAME: local
-      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: 129.154.213.183:9092
-    depends_on: 
-      - kafka
 
-  kafka_exporter:
-    container_name: kafka-exporter
-    image: danielqsj/kafka-exporter
-    command: --kafka.server=129.154.213.183:9092
+  kafka-2:
+    container_name: kafka-2
+    image: confluentinc/cp-kafka:7.1.1
+    platform: linux/amd64
     ports:
-      - "9308:9308"
-    depends_on: 
-      - kafka
-
-  prometheus:
-    container_name: prometheus
-    image: prom/prometheus
-    ports:
-      - "${PROMETHEUS_PORT}:9090"
+      - "${KAFKA_2_PORT}:9093"
     volumes:
-      - ./${PROMETHEUS_VOLUEM}:/etc/prometheus
-    depends_on: 
-      - kafka_exporter
+      - ./data/${KAFKA_DIR}/kafka-2:/var/lib/kafka/data
+    environment:
+      KAFKA_BROKER_ID: 2
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper-1:${ZOOKEEPER_PORT}
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
+      KAFKA_ADVERTISED_LISTENERS: INTERNAL://kafka-2:29093,EXTERNAL://${DOCKER_HOST_IP:-127.0.0.1}lhost:${KAFKA_2_PORT}
+      KAFKA_DEFAULT_REPLICATION_FACTOR: 3
+      KAFKA_NUM_PARTITIONS: 3
+    depends_on:
+      - zookeeper-1
+
+
+  kafka-3:
+    container_name: kafka-3
+    image: confluentinc/cp-kafka:7.1.1
+    platform: linux/amd64
+    ports:
+      - "${KAFKA_3_PORT}:9094"
+    volumes:
+      - ./data/${KAFKA_DIR}/kafka-3:/var/lib/kafka/data
+    environment:
+      KAFKA_BROKER_ID: 3
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper-1:${ZOOKEEPER_PORT}
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
+      KAFKA_ADVERTISED_LISTENERS: INTERNAL://kafka-3:29094,EXTERNAL://${DOCKER_HOST_IP:-127.0.0.1}:${KAFKA_3_PORT}
+      KAFKA_DEFAULT_REPLICATION_FACTOR: 3
+      KAFKA_NUM_PARTITIONS: 3
+    depends_on:
+      - zookeeper-1
+
+  kafka-ui:
+    container_name: kafka-ui
+    image: provectuslabs/kafka-ui
+    platform: linux/amd64
+    container_name: kafka-ui
+    ports:
+      - "${KAFKA_UI_PORT}:8080"
+    restart: always
+    environment:
+      - KAFKA_CLUSTERS_0_NAME=local
+      - KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS=kafka-1:29092,kafka-2:29093,kafka-3:29094
+      - KAFKA_CLUSTERS_0_ZOOKEEPER=zookeeper-1:${ZOOKEEPER_PORT}
+    depends_on:
+      - kafka-1
+      - kafka-2
+      - kafka-3
