chore: update environment variables

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,12 @@
-# zookeeper
+### ZOOKEEPER ###
 ZOOKEEPER_PORT=2181
 ZOOKEEPER_DIR=zookeeper_data
 
-# kafka
-KAFKA_PORT=9092
+### KAFKA ###
 KAFKA_DIR=kafka_data
+KAFKA_1_PORT=9092
+KAFKA_2_PORT=9093
+KAFKA_3_PORT=9094
+
+### KAFKA_UI ###
+KAFKA_UI_PORT=8080
