chore: add kafka cluster name profile environment

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,9 @@
 ### ZOOKEEPER ###
-ZOOKEEPER_PORT=2181
+ZOOKEEPER_PORT=32181
 ZOOKEEPER_DIR=zookeeper_data
 
 ### KAFKA ###
+PROFILE=local
 KAFKA_DIR=kafka_data
 KAFKA_1_PORT=9092
 KAFKA_2_PORT=9093
