--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,7 +47,7 @@ services:
       KAFKA_ZOOKEEPER_CONNECT: zookeeper-1:${ZOOKEEPER_PORT}
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
-      KAFKA_ADVERTISED_LISTENERS: INTERNAL://kafka-2:29093,EXTERNAL://${DOCKER_HOST_IP:-127.0.0.1}lhost:${KAFKA_2_PORT}
+      KAFKA_ADVERTISED_LISTENERS: INTERNAL://kafka-2:29093,EXTERNAL://${DOCKER_HOST_IP:-127.0.0.1}:${KAFKA_2_PORT}
       KAFKA_DEFAULT_REPLICATION_FACTOR: 3
       KAFKA_NUM_PARTITIONS: 3
     depends_on:
@@ -74,7 +74,6 @@ services:
       - zookeeper-1
 
   kafka-ui:
-    container_name: kafka-ui
     image: provectuslabs/kafka-ui
     platform: linux/amd64
     container_name: kafka-ui
@@ -82,9 +81,8 @@ services:
       - "${KAFKA_UI_PORT}:8080"
     restart: always
     environment:
-      - KAFKA_CLUSTERS_0_NAME=local
-      - KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS=kafka-1:29092,kafka-2:29093,kafka-3:29094
-      - KAFKA_CLUSTERS_0_ZOOKEEPER=zookeeper-1:${ZOOKEEPER_PORT}
+      KAFKA_CLUSTERS_0_NAME: ${PROFILE:-local}
+      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka-1:29092,kafka-2:29093,kafka-3:29094
     depends_on:
       - kafka-1
       - kafka-2
