--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,10 @@ KAFKA_DIR=kafka_data
 KAFKA_1_PORT=9092
 KAFKA_2_PORT=9093
 KAFKA_3_PORT=9094
+KAFKA_CONNECT_PORT=8083
 
 ### KAFKA_UI ###
 KAFKA_UI_PORT=8080
+
+### NETWORK ###
+DOCKER_HOST_IP=
