--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     container_name: kafka-1
     image: confluentinc/cp-kafka:7.5.3
     platform: linux/amd64
-    user: 1000
+    user: "1000"
     ports:
       - "${KAFKA_1_PORT}:9092"
     volumes:
@@ -25,7 +25,7 @@ services:
     container_name: kafka-2
     image: confluentinc/cp-kafka:7.5.3
     platform: linux/amd64
-    user: 1000
+    user: "1000"
     ports:
       - "${KAFKA_2_PORT}:9093"
     volumes:
@@ -46,7 +46,7 @@ services:
     container_name: kafka-3
     image: confluentinc/cp-kafka:7.5.3
     platform: linux/amd64
-    user: 1000
+    user: "1000"
     ports:
       - "${KAFKA_3_PORT}:9094"
     volumes:
