--- a/docker-compose-temp.yml
+++ b/docker-compose-temp.yml
@@ -3,6 +3,7 @@ services:
   kafka-1:
     container_name: kafka-1
     image: confluentinc/cp-kafka:7.5.3
+    user: root
     platform: linux/amd64
     ports:
       - "${KAFKA_1_PORT}:9092"
@@ -23,6 +24,7 @@ services:
   kafka-2:
     container_name: kafka-2
     image: confluentinc/cp-kafka:7.5.3
+    user: root
     platform: linux/amd64
     ports:
       - "${KAFKA_2_PORT}:9093"
@@ -43,6 +45,7 @@ services:
   kafka-3:
     container_name: kafka-3
     image: confluentinc/cp-kafka:7.5.3
+    user: root
     platform: linux/amd64
     ports:
       - "${KAFKA_3_PORT}:9094"
