fix: authentication kafka ui

--- a/docker-compose-temp.yml
+++ b/docker-compose-temp.yml
@@ -61,6 +61,9 @@ services:
       KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
       KAFKA_CONTROLLER_LISTENER_NAMES: CONTROLLER
       CLUSTER_ID: ${KAFKA_CLUSTER_ID:-MkU3OEVBNTcwNTJENDM2Qk}
+      AUTH_TYPE: "LOGIN_FORM"
+      SPRING_SECURITY_USER_NAME: ${SECURITY_USER_NAME}
+      SPRING_SECURITY_USER_PASSWORD: ${SECURITY_USER_PASSWORD}
 
   kafka-ui:
     image: provectuslabs/kafka-ui
